Formatting, indentation and javadoc generation